--- a/topstyles.css
+++ b/topstyles.css
@@ -7,6 +7,7 @@ body{width: 1080px;
 	min-width: 320px;
 	height: 100%;
 	margin: 0px auto;
+	background-color: #d0d0d0;
 	text-align: center;
 }
 .subBody{
@@ -62,7 +63,7 @@ body{width: 1080px;
 	height: 60px;
 	margin: 0px 0px 0px -15px;
 	text-align: center;
-	background-color: 	#F75000;
+	background-color: #F75000;
 	z-index: 2;
 }
 .menuBarFixated{
@@ -72,7 +73,7 @@ body{width: 1080px;
 	height: 60px;
 	margin: 0px 0px 0px -15px;
 	text-align: center;
-	background-color: 	#F75000;
+	background-color: #F75000;
 	z-index: 2;
 }
 .menuBar:before, .menuBar:after{
