--- a/_sass/hydejack/_content.pre.scss
+++ b/_sass/hydejack/_content.pre.scss
@@ -24,6 +24,7 @@
   margin-left: auto;
   margin-right: auto;
   padding: 5rem 1rem 12rem;
+  background-color: rgba(255,255,255,0.8);
 
   @media screen {
     padding-left: 1.5rem;
