--- a/_sass/hydejack/_content.pre.scss
+++ b/_sass/hydejack/_content.pre.scss
@@ -25,6 +25,7 @@
   margin-right: auto;
   padding: 5rem 1rem 12rem;
   background-color: rgba(255,255,255,0.8);
+  }
 
   @media screen {
     padding-left: 1.5rem;
