change mobile menu icon

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -9,3 +9,7 @@ hy-push-state{
 .mb6:hover{
 	border-left-color: darkorange;
 }
+.icon-menu:before{
+	border: .5rem solid white;
+	border-radius: .5rem;	
+}
