--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -16,8 +16,8 @@ hy-push-state{
 	border: .5rem solid white;
 	border-radius: .5rem;	
 }
-.layout-post{
-	background-color: rgba(255,255,255,0.8);
+.layout-post, .layout-about{
+	background-color: rgba(255,255,255,0.9);
 }
 .message{
 	margin-left: 1rem;
