--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -16,7 +16,7 @@ hy-push-state{
 	border: .5rem solid white;
 	border-radius: .5rem;	
 }
-.layout-post, .layout-about, .layout-list{
+.layout-post, .layout-about, .layout-list, .layout-page{
 	background-color: rgba(255,255,255,0.9);
 }
 .message{
