--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -14,7 +14,8 @@ hy-push-state{
 }
 .icon-menu:before{
 	border: .5rem solid white;
-	border-radius: .5rem;	
+	border-radius: .5rem;
+	box-shadow: 0rem 0rem 0.2rem gray;
 }
 .layout-post, .layout-about, .layout-list, .layout-page{
 	background-color: rgba(255,255,255,0.9);
