change post structure

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -17,7 +17,7 @@ hy-push-state{
 	border-radius: .5rem;
 	box-shadow: 0rem 0rem 0.2rem gray;
 }
-.layout-post, .layout-about, .layout-list, .layout-page{
+.layout-post, .layout-about, .layout-list, .layout-page, .layout-not-found{
 	background-color: rgba(255,255,255,0.9);
 }
 .message{
