--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -33,3 +33,10 @@ hy-push-state{
 .pagination-item>a{
 	box-shadow: 0px 0px 0.05rem darkgreen;
 }
+#_cookies-banner{
+	padding: 0;
+	background: white;
+	border-radius: 0.3rem;
+	box-shadow: 0.1rem 0rem 0.3rem grey;
+	margin-top: 1rem;
+}
