--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -33,7 +33,7 @@ hy-push-state{
 .pagination-item>a{
 	box-shadow: 0px 0px 0.05rem darkgreen;
 }
-#_cookies-banner{
+.nav-btn{
 	padding: 0;
 	background: white;
 	border-radius: 0.3rem;
