--- a/_includes/templates/cookies-banner.html
+++ b/_includes/templates/cookies-banner.html
@@ -2,7 +2,7 @@
   <div id="_cookies-banner" class="navbar fixed-top CookiesOK">
     <div class="content">
       <div class="nav-btn-bar">
-        <small class="nav-btn">
+        <small class="nav-btn" id="nav-btn-with-bg">
           <span>{{ site.data.strings.cookies_banner.text | default:'This site uses cookies.' | markdownify | replace:'<p>','' | replace:'</p>','' }}</span>
           <button id="_cookies-ok" class="btn btn-primary btn-sm">{{ site.data.strings.cookies_banner.okay | default:'Okay' }}</button>
         </small>
