change line-height style

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -40,6 +40,6 @@ hy-push-state{
 	box-shadow: 0.1rem 0rem 0.3rem grey;
 	margin-top: 1rem;
 }
-.line-height-0{
+.line-height-0 > li{
 	line-height: 0px;
 }
