change margin-bottom for p under li under ol

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -41,5 +41,5 @@ hy-push-state{
 	margin-top: 1rem;
 }
 ol.line-height-0 > li > p, ul.line-height-0 > li > p{
-	line-height: 0px;
+	margin-bottom: 0px;
 }
