--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -40,6 +40,6 @@ hy-push-state{
 	box-shadow: 0.1rem 0rem 0.3rem grey;
 	margin-top: 1rem;
 }
-ol.line-height-0 > li > p, ul.line-height-0 > li > p{
+ol.margin-btm-0-for-child-p > li > p, ul.margin-btm-0-for-child-p > li > p{
 	margin-bottom: 0px;
 }
