enable comment without disqus

--- a/_includes/head/links.html
+++ b/_includes/head/links.html
@@ -18,7 +18,11 @@
 
 {% assign disqus = site.disqus | default:site.disqus_shortname %}
 {% if disqus %}
-<link id="_disqusJS" rel="dns-prefetch" href="https://{{ disqus }}.disqus.com/embed.js">
+
+
+<!-- <link id="_disqusJS" rel="dns-prefetch" href="https://{{ disqus }}.disqus.com/embed.js"> -->
+
+
 {% endif %}
 
 {% comment %}<!--
