--- a/_includes/head/links.html
+++ b/_includes/head/links.html
@@ -19,9 +19,8 @@
 {% assign disqus = site.disqus | default:site.disqus_shortname %}
 {% if disqus %}
 
-
-<!-- <link id="_disqusJS" rel="dns-prefetch" href="https://{{ disqus }}.disqus.com/embed.js"> -->
-
+<link id="_disqusJS" rel="dns-prefetch" href="./assets/iDisqus.min.js">
+<link rel="stylesheet" href="./assets/iDisqus.min.css">
 
 {% endif %}
 
