change disqus again

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -3,6 +3,22 @@
 <aside class="comments related" role="complementary">
   <h2 class="hr">{{ site.data.strings.comments | default:"Comments" }}</h2>
   <div id="disqus_thread"></div>
+  <script>
+  	(function(){
+		if(document.getElementById('disqus_thread')){
+			var disq = new iDisqus('disqus_thread', {
+		        forum: 'houzhenni-com',
+		        api: 'https://37ed5962-3f77-41a6-bd8e-c7735322cebe.coding.io/api/login.php',
+		        site: 'https://www.houzhenni.com',
+		        mode: 1,
+		        timeout: 3000,
+		        init: true
+		    });
+		    disq.popular();
+		    disq.count();
+		}
+	})();
+  </script>
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 </aside>
 {% endif %}
