--- a/_includes/head/links.html
+++ b/_includes/head/links.html
@@ -19,6 +19,7 @@
 {% assign disqus = site.disqus | default:site.disqus_shortname %}
 {% if disqus %}
 
+<link id="_disqusJS" rel="dns-prefetch" src="/assets/iDisqus.min.js">
 <script src="/assets/iDisqus.min.js"></script>
 <link rel="stylesheet" href="/assets/iDisqus.min.css">
 
