--- a/_includes/head/links.html
+++ b/_includes/head/links.html
@@ -20,7 +20,7 @@
 {% if disqus %}
 
 <link id="_disqusJS" rel="dns-prefetch" src="/assets/iDisqus.min.js">
-<script src="/assets/iDisqus.min.js"></script>
+<!-- <script src="/assets/iDisqus.min.js"></script> -->
 <link rel="stylesheet" href="/assets/iDisqus.min.css">
 
 {% endif %}
