change script in comments

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -3,6 +3,7 @@
 <aside class="comments related" role="complementary">
   <h2 class="hr">{{ site.data.strings.comments | default:"Comments" }}</h2>
   <div id="disqus_thread"></div>
+  <script src="/assets/iDisqus.min.js"></script>
   <script>
   	(function(){
 		if(document.getElementById('disqus_thread')){
