--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,5 +1,5 @@
 {% assign disqus = site.disqus | default:site.disqus_shortname %}
-{% if disqus and page.comments %}
+{% if page.comments %}
 <aside class="comments related" role="complementary">
   <h2 class="hr">{{ site.data.strings.comments | default:"Comments" }}</h2>
   <div id="disqus_thread"></div>
