--- a/_includes/head/links.html
+++ b/_includes/head/links.html
@@ -16,14 +16,14 @@
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
 {% endif %}
 
-<!-- {% assign disqus = site.disqus | default:site.disqus_shortname %}
-{% if disqus %} -->
+{% assign disqus = site.disqus | default:site.disqus_shortname %}
+{% if disqus %}
 
-<!-- <link id="_disqusJS" rel="dns-prefetch" src="/assets/iDisqus.min.js"> -->
+<link id="_disqusJS" rel="dns-prefetch" src="/assets/iDisqus.min.js">
 <!-- <script src="/assets/iDisqus.min.js"></script> -->
 <!-- <link rel="stylesheet" href="/assets/iDisqus.min.css"> -->
 
-<!-- {% endif %} -->
+{% endif %}
 
 {% comment %}
 <link rel="stylesheet" href="/assets/iDisqus.min.css">
