change api path

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -9,7 +9,7 @@
 		if(document.getElementById('comment')){
 			var disq = new iDisqus('comment', {
 		        forum: 'houzhenni-com',
-		        api: 'https://37ed5962-3f77-41a6-bd8e-c7735322cebe.coding.io',
+		        api: 'https://37ed5962-3f77-41a6-bd8e-c7735322cebe.coding.io/api',
 		        site: 'https://www.houzhenni.com',
 		        mode: 1,
 		        timeout: 3000,
