change back api address

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -9,7 +9,7 @@
 		if(document.getElementById('comment')){
 			var disq = new iDisqus('comment', {
 		        forum: 'houzhenni-com',
-		        api: 'https://disqus-api-hzn.000webhostapp.com/public_html/disqus/api',
+		        api: 'https://disqus-api-hzn.000webhostapp.com/disqus/api',
 		        site: 'https://www.houzhenni.com',
 		        mode: 1,
 		        timeout: 3000,
