change button text color to white

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,5 +13,5 @@
   {% endif %}
   <p><small>Powered by <a class="external" href="https://qwtel.com/hydejack/">Hydejack</a> v<span id="_version">7.5.0</span></small></p>
   <hr class="sr-only"/>
-  <a href="#"><div style="position: fixed; right: 1rem; bottom: 1rem; width: 2.5rem; height: 2.5rem; text-align: center; line-height: 2.5rem; color: #888; background: rgba(0,0,0,0.1); border-radius: 2.5rem;">Top↑</div></a>
+  <a href="#"><div style="position: fixed; right: 1rem; bottom: 1rem; width: 2.5rem; height: 2.5rem; text-align: center; line-height: 2.5rem; color: white; background: rgba(0,0,0,0.1); border-radius: 2.5rem;">Top↑</div></a>
 </footer>
