--- a/_includes/head/styles.html
+++ b/_includes/head/styles.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="{{ style_url | relative_url }}">
 {% else %}
   <style>
-    
+    *{color: red;}
     {{ include_to_scssify | scssify }}
     {% if page.layout == "projects" or page.layout == "project" or page.layout == "welcome" %}
       {% capture include_to_scssify %}{% include styles/pro/projects.scss %}{% endcapture %}
