--- a/_includes/head/styles.html
+++ b/_includes/head/styles.html
@@ -5,8 +5,8 @@
   <link rel="stylesheet" href="{{ style_url | relative_url }}">
 {% else %}
   <style>
-    
-    
+    {% capture include_to_scssify %}{% include styles/inline.scss %}{% endcapture %}
+    {{ include_to_scssify | scssify }}
     {% if page.layout == "projects" or page.layout == "project" or page.layout == "welcome" %}
       {% capture include_to_scssify %}{% include styles/pro/projects.scss %}{% endcapture %}
       {{ include_to_scssify | scssify }}
