--- a/_sass/hydejack/__inline/_content.scss
+++ b/_sass/hydejack/__inline/_content.scss
@@ -38,12 +38,12 @@
 
   @media screen {
     padding-left: 1.5rem;
-    max-width: 38rem;
+    /* max-width: 38rem; */
     min-height: 100vh;
   }
 
   @media screen and (min-width: $break-point-2) {
-    max-width: 42rem;
+    /* max-width: 42rem; */
   }
 
   @media screen and (min-width: $break-point-3) {
@@ -53,7 +53,7 @@
   }
 
   @media screen and (min-width: $break-point-5) {
-    max-width: 48rem;
+    /* max-width: 48rem; */
   }
 
   @media screen and (min-width: $break-point-dynamic) {
