--- a/_sass/hydejack/__inline/_content.scss
+++ b/_sass/hydejack/__inline/_content.scss
@@ -54,9 +54,7 @@
 
   @media screen and (min-width: $break-point-5) {
     /* max-width: 48rem; */
-    margin-left: 22rem;
-    margin-right: 4rem;
-    padding-left: 1rem;
+    max-width: 52rem;
   }
 
   @media screen and (min-width: $break-point-dynamic) {
