--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,19 +13,14 @@
   {% endif %}
   <p><small>Powered by <a class="external" href="https://qwtel.com/hydejack/">Hydejack</a> v<span id="_version">7.5.0</span></small></p>
   <hr class="sr-only"/>
-  <!-- GoStats JavaScript Based Code -->
-  <script type="text/javascript" src="https://ssl.gostats.com/js/counter.js"></script>
-  <script type="text/javascript">
-    _gos='monster.gostats.cn';_goa=502309;
-    _got=1;_goi=67;_gol='php计数器';_GoStatsRun();
-  </script>
-  <noscript>
-    <a target="_blank" title="php计数器" 
-    href="http://gostats.cn"><img alt="php计数器" 
-    src="https://ssl.gostats.com/bin/count/a_502309/t_1/i_67/ssl_monster.gostats.cn/counter.png" 
-    style="border-width:0" />
-    </a>
-  </noscript>
-  <!-- End GoStats JavaScript Based Code -->
   <a href="#"><div style="position: fixed; right: 1rem; bottom: 3rem; width: 2.5rem; height: 2.5rem; text-align: center; line-height: 2.5rem; color: white; background: rgba(0,0,0,0.1); border-radius: 2.5rem;">Top↑</div></a>
+  <!-- GoStats JavaScript Based Code -->
+<script type="text/javascript" src="https://ssl.gostats.com/js/counter.js"></script>
+<script type="text/javascript">_gos='monster.gostats.cn';_goa=502309;
+_got=1;_goi=67;_gol='博客计数器';_GoStatsRun();</script>
+<noscript><a target="_blank" title="博客计数器" 
+href="http://gostats.cn"><img alt="博客计数器" 
+src="https://ssl.gostats.com/bin/count/a_502309/t_1/i_67/ssl_monster.gostats.cn/counter.png" 
+style="border-width:0" /></a></noscript>
+<!-- End GoStats JavaScript Based Code -->
 </footer>
