modify count icon style

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,10 +17,9 @@
   <!-- GoStats JavaScript Based Code -->
 <script type="text/javascript" src="https://ssl.gostats.com/js/counter.js"></script>
 <script type="text/javascript">_gos='monster.gostats.cn';_goa=502309;
-_got=1;_goi=67;_gol='博客计数器';_GoStatsRun();</script>
-<noscript><a target="_blank" title="博客计数器" 
-href="http://gostats.cn"><img alt="博客计数器" 
-src="https://ssl.gostats.com/bin/count/a_502309/t_1/i_67/ssl_monster.gostats.cn/counter.png" 
-style="border-width:0" /></a></noscript>
+_got=2;_goi=66;_gol='站点流量统计';_GoStatsRun();</script>
+<noscript><img alt="站点流量统计" 
+src="https://ssl.gostats.com/bin/count/a_502309/t_2/i_66/ssl_monster.gostats.cn/counter.png" 
+style="border-width:0" /></noscript>
 <!-- End GoStats JavaScript Based Code -->
 </footer>
