--- a/_sass/hydejack/__inline/_content.scss
+++ b/_sass/hydejack/__inline/_content.scss
@@ -58,10 +58,7 @@
 
   @media screen and (min-width: $break-point-dynamic) {
    /*  margin: auto; */
-    max-width: 60rem;
-    margin-left: 22rem;
-    margin-right: 4rem;
-    padding-left: 1rem;
+    max-width: 100%;
   }
 }
 
