--- a/_sass/hydejack/__inline/_content.scss
+++ b/_sass/hydejack/__inline/_content.scss
@@ -57,8 +57,7 @@
   }
 
   @media screen and (min-width: $break-point-dynamic) {
-   /*  margin: auto; */
-    max-width: 100%;
+    margin: auto;
   }
 }
 
