--- a/_includes/body.html
+++ b/_includes/body.html
@@ -18,6 +18,7 @@
     {{ content }}
     {% include comments.html %}
     {% include footer.html %}
+    {% include gostats.html %}
   </main>
   {% include sidebar.html %}
 </hy-push-state>
