--- a/_includes/gostats.html
+++ b/_includes/gostats.html
@@ -3,11 +3,13 @@
 <script type="text/javascript">_gos='monster.gostats.cn';_goa=502309;
 _got=2;_goi=44;_gol='流量统计';_GoStatsRun();</script>
 <noscript>
-<div style="position: relative; width: 100%;">
 <a target="_blank" title="流量统计" 
-href="http://gostats.cn"><img style="margin: 1rem auto;" alt="流量统计" 
+href="http://gostats.cn">
+  <div style="position: relative; width: 100%;">
+    <img style="margin: 1rem auto;" alt="流量统计" 
 src="https://ssl.gostats.com/bin/count/a_502309/t_2/i_44/ssl_monster.gostats.cn/counter.png" 
-style="border-width:0" /></a>
-</div>
+style="border-width:0" />
+  </div>
+</a>
 </noscript>
 <!-- End GoStats JavaScript Based Code -->
