--- a/_includes/gostats.html
+++ b/_includes/gostats.html
@@ -2,7 +2,7 @@
 <script type="text/javascript" src="https://ssl.gostats.com/js/counter.js"></script>
 <script type="text/javascript">_gos='monster.gostats.cn';_goa=502309;
 _got=2;_goi=44;_gol='流量统计';_GoStatsRun();</script>
-<noscript>
+<!-- <noscript> -->
 <a target="_blank" title="流量统计" 
 href="http://gostats.cn">
   <div style="position: relative; width: 100%;">
@@ -11,5 +11,5 @@ src="https://ssl.gostats.com/bin/count/a_502309/t_2/i_44/ssl_monster.gostats.cn/
 style="border-width:0" />
   </div>
 </a>
-</noscript>
+<!-- </noscript> -->
 <!-- End GoStats JavaScript Based Code -->
