--- a/_includes/gostats.html
+++ b/_includes/gostats.html
@@ -1,15 +1,25 @@
+<style>
+	#gostatsScript{
+		width: 100%;
+		height: fit-content;
+	}
+	#gostatsScript a:after{
+		content: "";
+	}
+	#gostatsScript img{
+		position: fixed;
+		right: 1rem;
+		bottom: 1rem;
+	}
+</style>
+<div id="gostatsScript">
 <!-- GoStats JavaScript Based Code -->
 <script type="text/javascript" src="https://ssl.gostats.com/js/counter.js"></script>
 <script type="text/javascript">_gos='monster.gostats.cn';_goa=502309;
 _got=2;_goi=44;_gol='流量统计';_GoStatsRun();</script>
-<!-- <noscript> -->
-<a target="_blank" title="流量统计" 
-href="http://gostats.cn">
-  <div style="position: relative; width: 100%;">
-    <img style="margin: 1rem auto;" alt="流量统计" 
+<noscript><a target="_blank" title="流量统计" 
+href="http://gostats.cn"><img alt="流量统计" 
 src="https://ssl.gostats.com/bin/count/a_502309/t_2/i_44/ssl_monster.gostats.cn/counter.png" 
-style="border-width:0" />
-  </div>
-</a>
-<!-- </noscript> -->
+style="border-width:0" /></a></noscript>
 <!-- End GoStats JavaScript Based Code -->
+</div>
