change gostats to statscounter

--- a/_includes/body.html
+++ b/_includes/body.html
@@ -18,7 +18,7 @@
     {{ content }}
     {% include comments.html %}
     {% include footer.html %}
-    {% include gostats.html %}
+    {% include statscounter.html %}
   </main>
   {% include sidebar.html %}
 </hy-push-state>
