--- a/_includes/head/meta.html
+++ b/_includes/head/meta.html
@@ -28,3 +28,5 @@
 {% endunless %}
 
 <meta name="generator" content="Hydejack v7.5.0">
+
+<meta name="baidu-site-verification" content="UJZmXyThIu" />
