--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,5 +13,7 @@
   {% endif %}
   <p><small>Powered by <a class="external" href="https://qwtel.com/hydejack/">Hydejack</a> v<span id="_version">7.5.0</span></small></p>
   <hr class="sr-only"/>
-  <div style="position: fixed; right: 1rem; bottom: 3rem; width: 2.5rem; height: 2.5rem; text-align: center; line-height: 2.5rem; color: white; background: rgba(0,0,0,0.1); border-radius: 2.5rem; cursor: pointer;" onclick="document.getElementById('_main').scrollIntoView()">Top↑</div>
+  <div style="user-select: none; position: fixed; right: 1rem; bottom: 3rem; width: 2.5rem; height: 2.5rem; text-align: center; line-height: 2.5rem; color: white; background: rgba(0,0,0,0.1); border-radius: 2.5rem; cursor: pointer;" onclick="document.getElementById('_main').scrollIntoView()">↑</div>
+  <div style="user-select: none; position: fixed; right: 1rem; bottom: 3rem; width: 2.5rem; height: 2.5rem; text-align: center; line-height: 2.5rem; color: white; background: rgba(0,0,0,0.1); border-radius: 2.5rem; cursor: pointer;" onclick="document.getElementsByTagName('footer')[0].scrollIntoView()">↓</div>
 </footer>
+{% include statcounter.html %}
