--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -24,13 +24,7 @@
       loadJSDeferred('https://www.google-analytics.com/analytics.js');
       var aTags = document.getElementsByTagName("a");
       for (let i = 0; i < aTags.length; i++) {
-        aTags[i].onclick = function(e) {
-          e.preventDefault();
-          var url = this.href;
-          var win = window.open(url, '_blank');
-          win.focus();
-          return false;
-        }
+        aTags[i].target = "_blank"
       }
     </script>
   {% endif %}
