--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -24,11 +24,18 @@
       loadJSDeferred('https://www.google-analytics.com/analytics.js');
       var aTags = document.getElementsByTagName("a");
       for (let i = 0; i < aTags.length; i++) {
-        let classList = aTags[i].classList;
-        if (classList.length == 0 || classList.contains("external") || classList.contains("no-mark-external")) {
-          aTags[i].target = "_blank"
+        if (/^\//.test(aTags[i].href) {
+          aTags[i].target = "_blank";
         }
       }
+      document.getElementsByTagName("body")[0].addEventListener("click", function() {
+        var aTags = document.getElementsByTagName("a");
+        for (let i = 0; i < aTags.length; i++) {
+          if (/^\//.test(aTags[i].href && aTags[i].target != "_blank") {
+            aTags[i].target = "_blank";
+          }
+        }
+      });
     </script>
   {% endif %}
 
