--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -24,14 +24,14 @@
       loadJSDeferred('https://www.google-analytics.com/analytics.js');
       var aTags = document.getElementsByTagName("a");
       for (let i = 0; i < aTags.length; i++) {
-        if (/([^houzhenni\.com]|houzhenni\.com\/myapp)/.test(aTags[i].href)) {
+        if (!/^https:\/\/(www|e-comm)\.houzhenni(\.com$|\.com\/\d.+)/.test(aTags[i].href)) {
           aTags[i].target = "_blank";
         }
       }
       document.getElementsByTagName("body")[0].addEventListener("click", function() {
         var aTags = document.getElementsByTagName("a");
         for (let i = 0; i < aTags.length; i++) {
-          if (/([^houzhenni\.com]|houzhenni\.com\/myapp)/.test(aTags[i].href) && aTags[i].target != "_blank") {
+          if (!/^https:\/\/(www|e-comm)\.houzhenni(\.com$|\.com\/\d.+)/.test(aTags[i].href) && aTags[i].target != "_blank") {
             aTags[i].target = "_blank";
           }
         }
