--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -31,7 +31,7 @@
       document.getElementsByTagName("body")[0].addEventListener("click", function() {
         var aTags = document.getElementsByTagName("a");
         for (let i = 0; i < aTags.length; i++) {
-          if (!/^https:\/\/(www|e-comm)\.houzhenni(\.com$|\.com\/\d.+)/.test(aTags[i].href) && aTags[i].target != "_blank") {
+          if (!/^https:\/\/(www|e-comm)\.houzhenni(\.com\/$|\.com\/\d.+)/.test(aTags[i].href) && aTags[i].target != "_blank") {
             aTags[i].target = "_blank";
           }
         }
