--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -23,15 +23,16 @@
       ga('send', 'pageview');
       loadJSDeferred('https://www.google-analytics.com/analytics.js');
       var aTags = document.getElementsByTagName("a");
+      var regExForA = /^https:\/\/www\.houzhenni(\.com\/$|\.com\/\d.+)/;
       for (let i = 0; i < aTags.length; i++) {
-        if (!/^https:\/\/(www|e-comm)\.houzhenni(\.com\/$|\.com\/\d.+)/.test(aTags[i].href)) {
+        if (!regExForA.test(aTags[i].href)) {
           aTags[i].target = "_blank";
         }
       }
       document.getElementsByTagName("body")[0].addEventListener("click", function() {
         var aTags = document.getElementsByTagName("a");
         for (let i = 0; i < aTags.length; i++) {
-          if (!/^https:\/\/(www|e-comm)\.houzhenni(\.com\/$|\.com\/\d.+)/.test(aTags[i].href) && aTags[i].target != "_blank") {
+          if (!regExForA.test(aTags[i].href) && aTags[i].target != "_blank") {
             aTags[i].target = "_blank";
           }
         }
