--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -29,14 +29,14 @@
           aTags[i].target = "_blank";
         }
       }
-      document.getElementsByTagName("body")[0].addEventListener("click", function() {
+      document.getElementsByTagName("body")[0].addEventListener("click", setTimeout(function() {
         var aTags = document.getElementsByTagName("a");
         for (let i = 0; i < aTags.length; i++) {
           if (!regExForA.test(aTags[i].href) && aTags[i].target != "_blank") {
             aTags[i].target = "_blank";
           }
         }
-      });
+      }, 100));
     </script>
   {% endif %}
 
