--- a/_includes/handlelinktag.html
+++ b/_includes/handlelinktag.html
@@ -1,3 +1,4 @@
+<script>
 (function() {
 	var aTags = document.getElementsByTagName("a");
 	var regExForA = /^https:\/\/www\.houzhenni(\.com\/$|\.com\/\d.+)/;
@@ -7,3 +8,4 @@
 		}
 	}
 })();
+</script>
