--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,4 +17,4 @@
   <div style="user-select: none; position: fixed; right: 1rem; bottom: 1.1rem; width: 2.5rem; height: 2.5rem; text-align: center; line-height: 2.5rem; color: white; background: rgba(0,0,0,0.1); border-radius: 2.5rem; cursor: pointer;" onclick="document.getElementById('power_by').scrollIntoView()">↓</div>
   {% include statcounter.html %}
 </footer>
-
+{% include handlelinktag.html %}
