--- a/_includes/handlelinktag.html
+++ b/_includes/handlelinktag.html
@@ -1,7 +1,7 @@
 <script>
 (function() {
 	var aTags = document.getElementsByTagName("a");
-	var regExForA = /^https:\/\/www\.houzhenni(\.com\/$|\.com\/\d.+)/;
+	var regExForA = /^https:\/\/www\.houzhenni(\.com\/$|\.com\/\d.+|\.com\/page.+|\.com\/posts)/;
 	for (let i = 0; i < aTags.length; i++) {
 		if (!regExForA.test(aTags[i].href) && aTags[i].target != "_blank") {
 		  aTags[i].target = "_blank";
