--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,8 +13,25 @@
   {% endif %}
   <p id="power_by"><small>Powered by <a class="external" href="https://qwtel.com/hydejack/">Hydejack</a> v<span id="_version">7.5.0</span></small></p>
   <hr class="sr-only"/>
-  <div style="user-select: none; position: fixed; right: 1rem; bottom: 3.6rem; width: 2.5rem; height: 2.5rem; text-align: center; line-height: 2.5rem; color: white; background: rgba(0,0,0,0.1); border-radius: 2.5rem; cursor: pointer;" onclick="document.getElementById('_main').scrollIntoView()">↑</div>
-  <div style="user-select: none; position: fixed; right: 1rem; bottom: 1.1rem; width: 2.5rem; height: 2.5rem; text-align: center; line-height: 2.5rem; color: white; background: rgba(0,0,0,0.1); border-radius: 2.5rem; cursor: pointer;" onclick="document.getElementById('power_by').scrollIntoView()">↓</div>
+  <style>
+  .top-down-btn {
+    user-select: none;
+    position: fixed;
+    right: 1rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    text-align: center;
+    line-height: 2rem;
+    font-size:2.5rem;
+    color: white;
+    background: rgba(0,0,0,0.1);
+    border-radius: 2.5rem;
+    cursor: pointer;
+  }
+  </style>
+  <div style="bottom: 3.6rem;" class="top-down-btn" onclick="document.getElementById('_main').scrollIntoView()">↑</div>
+  <div style="bottom: 1.1rem;" class="top-down-btn" onclick="document.getElementById('power_by').scrollIntoView()">↓</div>
   {% include statcounter.html %}
 </footer>
 {% include handlelinktag.html %}
+
