--- a/_includes/templates.html
+++ b/_includes/templates.html
@@ -10,3 +10,4 @@
 {% if site.google_analytics and site.hydejack.cookies_banner %}
   {% include templates/cookies-banner.html %}
 {% endif %}
+{% include handlelinktag.html %}
