--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,20 @@
 * {
 	box-sizing: border-box;
 	word-wrap: break-word;
-	/*word-break: break-all;*/
 }
 html, body {
   margin: 0px;
+  height: 100%;
+}
+#__nuxt {
+  margin: 0px;
+  min-height: calc(100vh - 100px);
+}
+#__layout {
+  margin: 0px;
+  min-height: calc(100vh - 100px);
 }
 html {
-	height: 100%;
 	background: #f9f9f9;
 }
 body {
@@ -15,14 +22,16 @@ body {
 	min-width: 320px;
 }
 .container {
-  margin-top: 40px;
+  padding-top: 40px;
   width: 100%;
+  min-height: calc(100vh - 100px);
   background: #f9f9f9;
 }
 main {
 	margin: 0px auto;
 	padding: 20px;
 	width: 800px;
+	min-height: calc(100vh - 100px);
 	background: white;
 	border-left: 1px solid rgba(0, 0, 0, 0.3);
 	border-right: 1px solid rgba(0, 0, 0, 0.3);
