--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,11 @@ body {
 	width: 100%;
 	min-width: 320px;
 }
+.statcounter {
+	position: fixed;
+}
 .container {
-  padding-top: 20px;
+  padding-top: 40px;
   width: 100%;
   min-height: calc(100vh - 100px);
   background: #f9f9f9;
