--- a/style.css
+++ b/style.css
@@ -30,6 +30,109 @@ body {
   min-height: calc(100vh - 100px);
   background: #f9f9f9;
 }
+nav {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
+	height: 40px;
+	background: inherit;
+	box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.6);
+	z-index: 9999;
+}
+.nav-wrap {
+	margin: 0px auto;
+	width: 800px;
+	height: 100%;
+	background: inherit;
+	display: flex;
+	justify-content: space-between;
+}
+header {
+	font-family: 'Gugi', 'Comic Sans MS';
+	margin: 0px 0px 0px 10px;
+	height: 100%;
+	z-index: 2;
+}
+header h2, .nav-ul {
+	margin: 0px;
+	height: 100%;
+}
+header a {
+	text-decoration: none;
+}
+header a:active, header a:visited {
+	color: inherit;
+}
+.nav-ul {
+	list-style: none;
+	text-align: right;
+	display: flex;
+	justify-content: center;
+	z-index: 1;
+}
+.nav-link {
+	margin-right: 20px;
+	height: 100%;
+	text-decoration: none;
+}
+.nav-link:last-child {
+	margin-right: 10px;
+}
+.nav-link:active {
+	color: inherit;
+}
+header h2, .nav-link {
+	color: black;
+	height: 100%;
+	line-height: 40px;
+}
+.nav-link:hover{
+    color: gray;
+}
+.nav-link:visited {
+	color: inherit;
+}
+.nuxt-link-active {
+	border-bottom: 1px solid black;
+}
+.nav-mask {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 40px;
+	background: inherit;
+	z-index: 0;
+}
+.body-mask {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 0px;
+	transition: height 0.8s;
+	background: rgba(0, 0, 0, 0.5);
+}
+.body-mask-visible {
+	height: 100%;
+}
+.nav-btn {
+	width: 40px;
+	height: 40px;
+	display: none;
+	z-index: 2;
+}
+.bar {
+	width: 70%;
+	height: 25%;
+	text-align: center;
+	border-bottom: 2px solid black;
+}
+.bar:last-child {
+	border: none;
+}
 main {
 	margin: 0px auto;
 	padding: 20px;
@@ -68,10 +171,69 @@ a, a:visited {
 img {
 	max-width: 100%;
 }
+#disqus_thread {
+	margin-top: 20px;
+}
+
 @media all and (max-width: 768px) {
+	nav {
+		width: 100%;
+	}
+	.nav-wrap {
+		width: 100%;
+	}
 	main {
 		margin: 0px;
 		padding: 10px;
 		width: auto;
+	}
+}
+
+@media all and (max-width: 425px) {
+	nav {
+		box-shadow: none;
+	}
+	.nav-mask {
+		border-bottom: 1px solid gray;
+		z-index: 1;
+	}
+	.nav-ul {
+		position: fixed;
+		top: 0px;
+		left: 0px;
+		margin-top: 40px;
+		padding: 0px;
+		width: 100%;
+		height: auto;
+		transform: translateY(-100%);
+		text-align: left;
+		background: white;
+		transition: transform 0.8s;
+		display: block;
+		overflow: hidden;
+		z-index: 0;
+	}
+	.nav-mobile {
+		transform: translateY(0px);
+	}
+	.nav-link {
+		margin: 0px 10px;
+		padding: 12px 0px 0px 0px;
+		height: auto;
+		line-height: 20px;
+		border-bottom: 1px solid black;
+		display: block;
+	}
+	.nav-link:last-child {
+		margin-bottom: 10px;
+	}
+	.nav-link li {
+		margin-left: 10px;
+		margin-right: 10px;
+		width: auto;
+		line-height: 20px;
+	}
+	.nav-btn {
+		display: block;
 	}
 }
