--- a/style.css
+++ b/style.css
@@ -155,11 +155,13 @@ a, a:visited {
 }
 .blog-tag {
 	margin: 5px;
-	padding: 2px;
+	padding: 0px 4px;
 	color: white;
 	font-size: 14px;
+	line-height: 26px;
 	border-radius: 10%;
 	background: gray;
+	display: inline-block;
 }
 .blog-tag:hover {
 	background: black;
@@ -174,6 +176,47 @@ img {
 #disqus_thread {
 	margin-top: 20px;
 }
+/* https://www.liaoxuefeng.com/article/895922498171008 */
+.go-top {
+    opacity: 0.6;
+    z-index: 999;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    margin-left: 40px;
+    border: 1px solid gray;
+    width: 38px;
+    height: 38px;
+    background-color: rgba(192, 192, 192, 0.2);
+    border-radius: 3px;
+    cursor: pointer;
+}
+.go-top:hover {
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+.go-top .arrow {
+    position: absolute;
+    left: 10px;
+    top: -1px;
+    width: 0;
+    height: 0;
+    border: 9px solid transparent;
+    border-bottom-color: gray;
+}
+.go-top .stick {
+    position: absolute;
+    left: 15px;
+    top: 15px;
+    width: 8px;
+    height: 14px;
+    display: block;
+    background-color: gray;
+    -webkit-border-radius: 1px;
+    -moz-border-radius: 1px;
+    border-radius: 1px;
+}
+/* toTop button end */
 
 @media all and (max-width: 768px) {
 	nav {
