--- a/style.css
+++ b/style.css
@@ -55,7 +55,11 @@ header {
 	height: 100%;
 	z-index: 2;
 }
-header h2, .nav-ul {
+.nav-home {
+	font-size: 1.5rem;
+	font-weight: bold;
+}
+.nav-home, .nav-ul {
 	margin: 0px;
 	height: 100%;
 }
@@ -83,7 +87,7 @@ header a:active, header a:visited {
 .nav-link:active {
 	color: inherit;
 }
-header h2, .nav-link {
+.nav-home, .nav-link {
 	color: black;
 	height: 100%;
 	line-height: 40px;
@@ -176,24 +180,25 @@ img {
 #disqus_thread {
 	margin-top: 20px;
 }
+/* toTop button start */
 /* https://www.liaoxuefeng.com/article/895922498171008 */
 .go-top {
     opacity: 0.6;
     z-index: 999;
     position: fixed;
-    bottom: 20px;
+    bottom: 40px;
     right: 20px;
     margin-left: 40px;
     border: 1px solid gray;
     width: 38px;
     height: 38px;
-    background-color: rgba(192, 192, 192, 0.2);
+    background-color: rgba(249, 249, 249, 1);
     border-radius: 3px;
     cursor: pointer;
+    transition: opacity .3s;
 }
 .go-top:hover {
     opacity: 1;
-    filter: alpha(opacity=100);
 }
 .go-top .arrow {
     position: absolute;
@@ -217,6 +222,11 @@ img {
     border-radius: 1px;
 }
 /* toTop button end */
+.go-top-hidden {
+	opacity: 0;
+	display: none;
+}
+
 
 @media all and (max-width: 768px) {
 	nav {
