--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ a, a:visited {
     padding: 0px 3px;
     color: white;
     font-size: 12px;
+    font-family: "Microsoft Yahei";
     line-height: 20px;
     border-radius: 10%;
     background: gray;
