--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ nav {
 	height: 40px;
 	background: inherit;
 	box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.6);
-	z-index: 9999;
+	z-index: 99;
 }
 .nav-wrap {
 	margin: 0px auto;
@@ -152,7 +152,7 @@ a, a:visited {
 .font-arial {
   font-family: Arial;
 }
-.blog-date {
+.blog-date, .blog-tags {
 	font-family: "Arial";
 	color: gray;
 	font-size: 14px;
@@ -180,6 +180,24 @@ img {
 }
 #disqus_thread {
 	margin-top: 20px;
+}
+.font-10 {
+  font-size: 10px;
+}
+.font-14 {
+  font-size: 14px;
+}
+.font-18 {
+  font-size: 18px;
+}
+.font-20 {
+  font-size: 20px;
+}
+.font-24 {
+  font-size: 24px;
+}
+.font-bold {
+  font-weight: bold;
 }
 /* toTop button start */
 /* https://www.liaoxuefeng.com/article/895922498171008 */
