--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+:root {
+	--color1: #ebf1fb;
+}
 * {
 	box-sizing: border-box;
 	word-wrap: break-word;
@@ -13,7 +16,7 @@ html, body {
   margin: 0px;
 }
 html {
-	background: #f9f9f9;
+	background: var(--color1);
 }
 body {
 	width: 100%;
@@ -23,9 +26,9 @@ body {
 	position: fixed;
 }
 .container {
-  padding-top: 40px;
+  padding-top: 42px;
   width: 100%;
-  background: #f9f9f9;
+  background: var(--color1);
 }
 nav {
 	position: fixed;
@@ -34,9 +37,10 @@ nav {
 	right: 0px;
 	bottom: 0px;
 	height: 40px;
+	font-family: "Poppins", Sans-serif;
 	background: inherit;
-	box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.6);
-	z-index: 99;
+	/*box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.6);*/
+	z-index: 999;
 }
 .nav-wrap {
 	margin: 0px auto;
@@ -96,7 +100,7 @@ header a:active, header a:visited {
     color: gray;
 }
 .nuxt-link-active {
-	border-bottom: 1px solid black;
+	border-bottom: 2px solid black;
 }
 .nav-mask {
 	position: fixed;
@@ -138,10 +142,12 @@ main {
 	margin: 0px auto;
 	padding: 20px;
 	width: 800px;
-	min-height: calc(100vh - 121px);
+	min-height: calc(100vh - 123px);
 	background: white;
-	border-left: 1px solid rgba(0, 0, 0, 0.3);
-	border-right: 1px solid rgba(0, 0, 0, 0.3);
+	/*border-left: 1px solid rgba(0, 0, 0, 0.3);*/
+	/*border-right: 1px solid rgba(0, 0, 0, 0.3);*/
+	border-radius: 30px;
+	box-shadow: 0px 0px 3px 0px silver;
 }
 a, a:visited {
 	color: inherit;
@@ -203,7 +209,7 @@ img {
 /* https://www.liaoxuefeng.com/article/895922498171008 */
 .go-top {
     opacity: 0.6;
-    z-index: 999;
+    z-index: 99;
     position: fixed;
     bottom: 40px;
     right: 20px;
@@ -245,7 +251,14 @@ img {
 	opacity: 0;
 	display: none;
 }
-
+footer {
+	padding: 20px;
+}
+footer p {
+	margin: 0 auto;
+	font-size: 14px;
+	text-align: center;
+}
 
 @media all and (max-width: 768px) {
 	nav {
@@ -262,6 +275,9 @@ img {
 }
 
 @media all and (max-width: 425px) {
+	.container {
+		padding-top: 40px;
+	}
 	nav {
 		box-shadow: none;
 	}
@@ -307,5 +323,13 @@ img {
 	}
 	.nav-btn {
 		display: block;
+	}
+	main {
+		min-height: calc(100vh - 121px);
+		border-radius: 0px;
+		box-shadow: none;
+	}
+	footer {
+		border-top: 1px solid rgba(0, 0, 0, 0.6);
 	}
 }
