--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 :root {
-	--color1: #ebf1fb;
+	--color1: hsla(0, 0%, 98%, 1);
 }
 * {
 	box-sizing: border-box;
@@ -44,7 +44,7 @@ nav {
 }
 .nav-wrap {
 	margin: 0px auto;
-	width: 800px;
+	/*width: 800px;*/
 	height: 100%;
 	background: inherit;
 	display: flex;
@@ -140,10 +140,16 @@ header a:active, header a:visited {
 }
 main {
 	margin: 0px auto;
+	width: 100%;
+}
+.main-content {
+	margin: 40px auto;
 	padding: 20px;
 	width: 800px;
-	min-height: calc(100vh - 121px);
+	min-height: calc(100vh - 198px);
 	background: white;
+	border: 1px solid silver;
+	border-radius: 5px;
 }
 a, a:visited {
 	color: inherit;
@@ -180,9 +186,6 @@ a, a:visited {
 img {
 	max-width: 100%;
 }
-#disqus_thread {
-	margin-top: 20px;
-}
 .font-10 {
   font-size: 10px;
 }
@@ -200,6 +203,9 @@ img {
 }
 .font-bold {
   font-weight: bold;
+}
+.align-center {
+  text-align: center;
 }
 /* toTop button start */
 /* https://www.liaoxuefeng.com/article/895922498171008 */
@@ -249,6 +255,8 @@ img {
 }
 footer {
 	padding: 20px;
+	color: white;
+	background: hsla(0, 0%, 20%, 1);
 }
 footer p {
 	margin: 0 auto;
@@ -264,9 +272,13 @@ footer p {
 		width: 100%;
 	}
 	main {
-		margin: 0px;
-		padding: 10px;
 		width: auto;
+	}
+	.main-content {
+		margin: 0px;
+		width: auto;
+		border: none;
+		border-radius: 0px;
 	}
 }
 
@@ -278,7 +290,6 @@ footer p {
 		box-shadow: none;
 	}
 	.nav-mask {
-		border-bottom: 1px solid gray;
 		z-index: 1;
 	}
 	.nav-ul {
@@ -320,11 +331,6 @@ footer p {
 	}
 	.nav-btn {
 		display: block;
-	}
-	main {
-		min-height: calc(100vh - 121px);
-		border-radius: 0px;
-		box-shadow: none;
 	}
 	footer {
 		border-top: 1px solid rgba(0, 0, 0, 0.6);
