--- a/css/style.css
+++ b/css/style.css
@@ -9,18 +9,18 @@ html, body {
   margin: 0px;
   height: 100%;
 }
-#__nuxt {
-  margin: 0px;
-}
-#__layout {
-  margin: 0px;
-}
 html {
 	background: var(--color1);
 }
 body {
 	width: 100%;
 	min-width: 320px;
+}
+#__nuxt {
+  margin: 0px;
+}
+#__layout {
+  margin: 0px;
 }
 .statcounter {
 	position: fixed;
@@ -44,7 +44,6 @@ nav {
 }
 .nav-wrap {
 	margin: 0px auto;
-	/*width: 800px;*/
 	height: 100%;
 	background: inherit;
 	display: flex;
@@ -77,9 +76,12 @@ header a:active, header a:visited {
 	justify-content: center;
 	z-index: 1;
 }
+.nav-ul li {
+	height: 36px;
+}
 .nav-link {
 	margin-right: 20px;
-	height: 100%;
+	height: 35px;
 	text-decoration: none;
 }
 .nav-link:last-child {
@@ -88,9 +90,13 @@ header a:active, header a:visited {
 .nav-link:active {
 	color: inherit;
 }
-.nav-home, .nav-link {
+.nav-home {
 	color: inherit;
 	height: 100%;
+	line-height: 40px;
+}
+.nav-link {
+	color: inherit;
 	line-height: 40px;
 }
 .nav-link:visited {
@@ -144,9 +150,17 @@ main {
 }
 .main-content {
 	margin: 40px auto;
-	padding: 20px;
-	width: 800px;
+	padding: 20px 40px;
+	width: 1080px;
 	min-height: calc(100vh - 198px);
+	background: white;
+	border: 1px solid silver;
+	border-radius: 5px;
+}
+.main-content-unit {
+	margin: 40px auto;
+	padding: 20px;
+	width: 1080px;
 	background: white;
 	border: 1px solid silver;
 	border-radius: 5px;
@@ -264,7 +278,7 @@ footer p {
 	text-align: center;
 }
 
-@media all and (max-width: 768px) {
+@media all and (max-width: 1080px) {
 	nav {
 		width: 100%;
 	}
@@ -275,6 +289,9 @@ footer p {
 		width: auto;
 	}
 	.main-content {
+		padding: 20px;
+	}
+	.main-content, .main-content-unit {
 		margin: 0px;
 		width: auto;
 		border: none;
@@ -327,6 +344,7 @@ footer p {
 		margin-left: 10px;
 		margin-right: 10px;
 		width: auto;
+		height: auto;
 		line-height: 20px;
 	}
 	.nav-btn {
