--- a/css/style.css
+++ b/css/style.css
@@ -289,6 +289,7 @@ footer p {
 		width: auto;
 	}
 	.main-content {
+		min-height: calc(100vh - 118px);
 		padding: 20px;
 	}
 	.main-content, .main-content-unit {
