add box-shadow for nav bar

--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ header a:active, header a:visited {
 	height: 40px;
 	background: inherit;
 	z-index: 0;
+    box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.6);
 }
 .body-mask {
 	position: fixed;
