--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,9 @@ img {
 .font-14 {
   font-size: 14px;
 }
+.font-16 {
+  font-size: 16px;
+}
 .font-18 {
   font-size: 18px;
 }
@@ -223,6 +226,9 @@ img {
 }
 .font-bold {
   font-weight: bold;
+}
+.font-norm {
+  font-weight: normal;
 }
 .align-center {
   text-align: center;
