--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,14 @@ main {
 	margin: 0px auto;
 	width: 100%;
 }
+.main-wrap {
+  width: 100%;
+  min-height: calc(100vh - 160px);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 .main-content {
 	margin: 40px auto;
 	padding: 20px 40px;
@@ -205,6 +213,7 @@ a, a:visited {
 }
 img {
 	max-width: 100%;
+	border: 1px solid silver;
 }
 .font-10 {
   font-size: 10px;
